--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,96 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: Clear Sans;
+    src: url(ClearSans-Light-webfont.fe3992bc.eot);
+    src: url(ClearSans-Light-webfont.fe3992bc.eot?#iefix) format("embedded-opentype"), url(ClearSans-Light-webfont.95af1afc.svg#clear_sans_lightregular) format("svg"), url(ClearSans-Light-webfont.fb98e0ac.woff) format("woff");
+    font-weight: 200;
+    font-style: normal
+}
+
+@font-face {
+    font-family: Clear Sans;
+    src: url(ClearSans-Regular-webfont.662fe67c.eot);
+    src: url(ClearSans-Regular-webfont.662fe67c.eot?#iefix) format("embedded-opentype"), url(ClearSans-Regular-webfont.3abd45a8.svg#clear_sansregular) format("svg"), url(ClearSans-Regular-webfont.7edfc781.woff) format("woff");
+    font-weight: 400;
+    font-style: normal
+}
+
+@font-face {
+    font-family: Clear Sans;
+    src: url(ClearSans-Bold-webfont.6a6f5f3f.eot);
+    src: url(ClearSans-Bold-webfont.6a6f5f3f.eot?#iefix) format("embedded-opentype"), url(ClearSans-Bold-webfont.be59597a.svg#clear_sansbold) format("svg"), url(ClearSans-Bold-webfont.ae49b717.woff) format("woff");
+    font-weight: 700;
+    font-style: normal
+}
+
+@font-face {
+    font-family: Pacifico;
+    font-style: normal;
+    font-weight: 400;
+    src: url(Pacifico-Regular.c0c32478.woff) format("woff2");
+    unicode-range: U+00??, U+0131, U+0152-0153, U+02bb-02bc, U+02c6, U+02da, U+02dc, U+2000-206f, U+2074, U+20ac, U+2122, U+2191, U+2193, U+2212, U+2215, U+feff, U+fffd
+}
+
+* {
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-touch-callout: none;
+    -webkit-text-size-adjust: none
+}
+
+:focus,
+button:focus,
+input:focus,
+textarea:focus {
+    outline: none
+}
+
+body {
+    padding: 0;
+    margin: 0;
+    font-family: Clear Sans, Arial, sans-serif;
+    background: #57407c;
+    color: #fff
+}
+
+@media screen and (max-width:520px) {
+    body {
+        margin: 20px 0;
+        padding: 0 20px;
+        font-size: 12px
+    }
+}
+
+.game-container {
+    position: relative;
+    margin: 0 auto;
+    background: #ccc;
+}
+
 .block {
     display: flex;
-    border: 1px solid #999;
     justify-content: center;
-    align-items: center;
-    transition: left 0.2s ease, top 0.2s ease;
+    align-items: flex-start;
+    border-radius: 10px;
+    transition: left 150ms ease 0s, top 150ms ease 0s;
+}
+
+.block.block-blank {
+    background: rgb(61, 41, 99)
+}
+
+.block.block-item {
+    background: rgb(106, 198, 184);
+    cursor: pointer;
+    user-select: none;
+    font-family: "Pacifico", cursive;
+    text-align: center;
+    font-weight: bold;
+    z-index: 10;
+}
+
+.block.block-item.correct-position {
+    background: rgb(232, 138, 69);
 }
