--- a/src/style.css
+++ b/src/style.css
@@ -6,24 +6,24 @@
 
 @font-face {
     font-family: Clear Sans;
-    src: url(ClearSans-Light-webfont.fe3992bc.eot);
-    src: url(ClearSans-Light-webfont.fe3992bc.eot?#iefix) format("embedded-opentype"), url(ClearSans-Light-webfont.95af1afc.svg#clear_sans_lightregular) format("svg"), url(ClearSans-Light-webfont.fb98e0ac.woff) format("woff");
+    src: url(/fonts/ClearSans-Light-webfont.fe3992bc.eot);
+    src: url(/fonts/ClearSans-Light-webfont.fe3992bc.eot?#iefix) format("embedded-opentype"), url(/fonts/ClearSans-Light-webfont.95af1afc.svg#clear_sans_lightregular) format("svg"), url(/fonts/ClearSans-Light-webfont.fb98e0ac.woff) format("woff");
     font-weight: 200;
     font-style: normal
 }
 
 @font-face {
     font-family: Clear Sans;
-    src: url(ClearSans-Regular-webfont.662fe67c.eot);
-    src: url(ClearSans-Regular-webfont.662fe67c.eot?#iefix) format("embedded-opentype"), url(ClearSans-Regular-webfont.3abd45a8.svg#clear_sansregular) format("svg"), url(ClearSans-Regular-webfont.7edfc781.woff) format("woff");
+    src: url(/fonts/ClearSans-Regular-webfont.662fe67c.eot);
+    src: url(/fonts/ClearSans-Regular-webfont.662fe67c.eot?#iefix) format("embedded-opentype"), url(/fonts/ClearSans-Regular-webfont.3abd45a8.svg#clear_sansregular) format("svg"), url(/fonts/ClearSans-Regular-webfont.7edfc781.woff) format("woff");
     font-weight: 400;
     font-style: normal
 }
 
 @font-face {
     font-family: Clear Sans;
-    src: url(ClearSans-Bold-webfont.6a6f5f3f.eot);
-    src: url(ClearSans-Bold-webfont.6a6f5f3f.eot?#iefix) format("embedded-opentype"), url(ClearSans-Bold-webfont.be59597a.svg#clear_sansbold) format("svg"), url(ClearSans-Bold-webfont.ae49b717.woff) format("woff");
+    src: url(/fonts/ClearSans-Bold-webfont.6a6f5f3f.eot);
+    src: url(/fonts/ClearSans-Bold-webfont.6a6f5f3f.eot?#iefix) format("embedded-opentype"), url(/fonts/ClearSans-Bold-webfont.be59597a.svg#clear_sansbold) format("svg"), url(/fonts/ClearSans-Bold-webfont.ae49b717.woff) format("woff");
     font-weight: 700;
     font-style: normal
 }
@@ -32,7 +32,7 @@
     font-family: Pacifico;
     font-style: normal;
     font-weight: 400;
-    src: url(Pacifico-Regular.c0c32478.woff) format("woff2");
+    src: url(/fonts/Pacifico-Regular.c0c32478.woff) format("woff2");
     unicode-range: U+00??, U+0131, U+0152-0153, U+02bb-02bc, U+02c6, U+02da, U+02dc, U+2000-206f, U+2074, U+20ac, U+2122, U+2191, U+2193, U+2212, U+2215, U+feff, U+fffd
 }
 
