--- a/src/style.css
+++ b/src/style.css
@@ -260,14 +260,31 @@ body {
     cursor: pointer;
     background-color: rgb(61, 41, 99);
     margin-bottom: 1rem;
+    width: 100%;
+    border: none;
 }
 
 .btn:hover {
     background-color: rgb(117, 102, 142);
 }
 
+.btn.btn-primary {
+    background-color: rgb(56, 198, 176);
+}
+
+.btn.btn-primary:hover,
+.btn.btn-primary:disabled {
+    background-color: rgb(19, 166, 143);
+}
+
+.btn.btn-primary:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+}
+
 .home-container {
     max-width: 500px;
     margin: 0 auto;
     padding: 1.2rem;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
