--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+html,
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 body {
     margin: 0
 }
@@ -206,6 +213,10 @@ body {
     color: #fff
 }
 
+.font-logo {
+    font-family: 'Pacifico', cursive
+}
+
 .game-container {
     position: relative;
     margin: 0 auto;
@@ -253,7 +264,7 @@ body {
     text-decoration: none;
     color: #fff;
     padding: 1rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     border-radius: 10px;
     display: block;
     text-align: center;
@@ -286,5 +297,4 @@ body {
     max-width: 500px;
     margin: 0 auto;
     padding: 1.2rem;
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
